--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <p>Para enfatizar palavras importantes, tendemos a enfatizá-las na linguagem falada e colocá-la em negrito na linguagem escrita. Para fazer isso no HTML temos a tag &lt;Strong&gt;</p>
 
         <h2>É hora da atividade</h2>
-        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="../aula-10-09-24/atividade.zip" download="atividade">arquivo</a>, dentro dele há um arquivo HTML que etá faltando algumas tags, você deverá completar o arquivo com as tas que estão faltando.</p>
-        <p>A página deverá ficar parecido com a do <a target="_blank" href="../aula-10-09-24/texto.html">exemplo</a></p>
+        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-10-09-24/atividade.zip" download="atividade">arquivo</a>, dentro dele há um arquivo HTML que etá faltando algumas tags, você deverá completar o arquivo com as tas que estão faltando.</p>
+        <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-10-09-24/texto.html">exemplo</a></p>
     </main>
 </body>
 </html>
