aula de java scripty

--- a/aula-10-09-24/texto.html
+++ b/aula-10-09-24/texto.html
@@ -3,47 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Ajeitando o texto</title>
 </head>
 <body>
-    <h1>Desenvolvedor Front-end: Crie a Interface do Futuro</h1>
-<h2>O que é um Desenvolvedor Front-end?</h2>
+    <div class="conteiner">
+        <h1>Desenvolvedor Front-end: Crie a Interface do Futuro</h1>
+        <h2>O que é um Desenvolvedor Front-end?</h2>
 
-<p>Você já se perguntou como os sites e aplicativos que você usa diariamente são construídos? Quem cria as interfaces intuitivas e visuais que tornam a sua experiência online tão agradável? A resposta é: o desenvolvedor front-end.</p>
+        <p>Você já se perguntou como os sites e aplicativos que você usa diariamente são construídos? Quem cria as interfaces intuitivas e visuais que tornam a sua experiência online tão agradável? A resposta é: o desenvolvedor front-end.</p>
 
-<p>O desenvolvedor front-end é o profissional responsável por criar e dar vida à parte visual de um site ou aplicativo. É ele quem transforma designs em código, utilizando linguagens como <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>. Em outras palavras, tudo o que um usuário vê e interage em uma plataforma digital é resultado do trabalho do desenvolvedor front-end.</p>
+        <p>O desenvolvedor front-end é o profissional responsável por criar e dar vida à parte visual de um site ou aplicativo. É ele quem transforma designs em código, utilizando linguagens como <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>. Em outras palavras, tudo o que um usuário vê e interage em uma plataforma digital é resultado do trabalho do desenvolvedor front-end.</p>
 
-<h2>Por que ser um Desenvolvedor Front-end?</h2>
-<ul>
-<li><b>Crie experiências incríveis:</b> A demanda por interfaces intuitivas e atraentes nunca foi tão alta. Como desenvolvedor front-end, você terá a oportunidade de criar experiências digitais que encantam os usuários.</li>
+        <h2>Por que ser um Desenvolvedor Front-end?</h2>
+        <ul>
+        <li><b>Crie experiências incríveis:</b> A demanda por interfaces intuitivas e atraentes nunca foi tão alta. Como desenvolvedor front-end, você terá a oportunidade de criar experiências digitais que encantam os usuários.</li>
 
-<li><b>Mercado em constante crescimento:</b> O setor de tecnologia está em constante expansão, e a necessidade por profissionais qualificados em front-end só tende a aumentar.</li>
-<li><b>Flexibilidade e autonomia:</b> A área de <em>desenvolvimento</em> permite que você <i>trabalhe</i> em diversos projetos e até mesmo como freelancer, oferecendo grande flexibilidade e autonomia.</li>
-<li><b>Salários competitivos:</b> Profissionais de front-end são bem remunerados, com salários que podem variar bastante dependendo da experiência e da localização.</li>
-</ul>
-<h2>Habilidades Essenciais para um Desenvolvedor Front-end</h2>
-<ul>
-<li><b>HTML, CSS e JavaScript:</b> Dominar essas linguagens é fundamental para qualquer desenvolvedor front-end.</li>
-<li><b>Frameworks e bibliotecas:</b> Conhecer frameworks como React, Angular e Vue.js e bibliotecas como jQuery pode te ajudar a construir aplicações mais complexas e eficientes.</li>
-<li><b>Responsive Design:</b> Criar sites e aplicativos que se adaptam a diferentes dispositivos (desktop, tablets, smartphones) é essencial.</li>
-<li><b>UX/UI Design:</b> Entender os princípios de design e a experiência do usuário é fundamental para criar interfaces intuitivas e agradáveis.</li>
-<li><b>Versionamento de código:</b> Utilizar ferramentas como Git para gerenciar o código e trabalhar em equipe.</li>
-</ul>
-<h2>Como se tornar um Desenvolvedor Front-end?</h2>
+        <li><b>Mercado em constante crescimento:</b> O setor de tecnologia está em constante expansão, e a necessidade por profissionais qualificados em front-end só tende a aumentar.</li>
+        <li><b>Flexibilidade e autonomia:</b> A área de <em>desenvolvimento</em> permite que você <i>trabalhe</i> em diversos projetos e até mesmo como freelancer, oferecendo grande flexibilidade e autonomia.</li>
+        <li><b>Salários competitivos:</b> Profissionais de front-end são bem remunerados, com salários que podem variar bastante dependendo da experiência e da localização.</li>
+        </ul>
+        <h2>Habilidades Essenciais para um Desenvolvedor Front-end</h2>
+        <ul>
+        <li><b>HTML, CSS e JavaScript:</b> Dominar essas linguagens é fundamental para qualquer desenvolvedor front-end.</li>
+        se adaptam a diferentes dispositivos (desktop, tablets, smartphones) é essencial.</li>
+        <li><b>UX/UI Design:</b> Entender os princípios de design e a experiência do usuário é fundamental para criar interfaces intuitivas e agradáveis.</li>
+        <li><b>Versionamento de código:</b> Utilizar ferramentas como Git para gerenciar o código e trabalhar em equipe.</li>
+        </ul>
+        <h2><em>Como se tornar um Desenvolvedor Front-end?</em></h2>
 
-<p>Existem diversas formas de se tornar um desenvolvedor front-end:</p>
-<ul>
-<li><b>Cursos online:</b> Plataformas como Udemy, Coursera e a própria DIO oferecem diversos cursos completos sobre desenvolvimento front-end.</li>
-<li><b>Bootcamps:</b> Imersões intensivas que te preparam para o mercado de trabalho em poucos meses.</li>
-<li><b>Faculdades:</b> Graduações em Ciência da Computação, Sistemas de Informação e áreas relacionadas podem te fornecer uma base sólida em programação.</li>
-<li><b>Autodidatismo:</b> Com muita dedicação e recursos online, é possível aprender a programar por conta própria.</li>
-</ul>
-<h2>O Futuro do Desenvolvedor Front-end</h2>
+        <p><span style="font-weight: 900;">Existem diversas formas de se tornar um desenvolvedor front-end:</span></p>
+        <ul>
+        <li><b>Cursos online:</b> <span style="font-style: italic;">Plataformas como Udemy</span>, Coursera e a própria DIO oferecem diversos cursos completos sobre desenvolvimento front-end.</li>
+        <li><b>Bootcamps:</b> Imersões intensivas que te preparam para o mercado de trabalho em poucos meses.</li>
+        <li><b>Faculdades:</b> Graduações em Ciência da Computação, Sistemas de Informação e áreas relacionadas podem te fornecer uma base sólida em programação.</li>
+        <li><b>Autodidatismo:</b> Com muita dedicação e recursos online, é possível aprender a programar por conta própria.</li>
+        </ul>
+        <h2>O Futuro do Desenvolvedor Front-end</h2>
 
-<p>O futuro do desenvolvedor front-end é promissor. Com o avanço das tecnologias, novas ferramentas e linguagens estão surgindo constantemente, o que exige que o profissional esteja sempre atualizado. Novas áreas como realidade virtual e aumentada, inteligência artificial e internet das coisas também abrirão novas oportunidades para os desenvolvedores front-end.</p>
+        <p>O futuro do <span style="font-style: italic;">desenvolvedor front-end</span> é promissor. Com o avanço das tecnologias, novas ferramentas e linguagens estão surgindo constantemente, o que exige que o profissional esteja sempre atualizado. Novas áreas como realidade virtual e aumentada, <span style="font-weight: bold;">inteligência artificial</span> e internet das coisas também abrirão novas oportunidades para os desenvolvedores front-end.</p>
 
-<h2>Conclusão</h2>
+        <h2>Conclusão</h2>
 
-<p>Se você tem paixão por tecnologia, criatividade e gosta de resolver problemas, a carreira de desenvolvedor front-end pode ser perfeita para você. Com dedicação e estudo, você poderá construir interfaces incríveis e fazer a diferença no mundo digital.</p>
+        <p>Se você tem paixão por tecnologia, criatividade e gosta de resolver problemas, a carreira de desenvolvedor front-end pode ser perfeita para você. Com dedicação e estudo, você poderá construir interfaces incríveis e fazer a diferença no mundo digital.</p>
+        <li><b>Responsive Design:</b> Criar sites e aplicativos que se adaptam a diferentes dispositivos (desktop, tablets, smartphones) é essencial.</li>
+        <li><b>UX/UI Design:</b> Entender os princípios de design e a experiência do usuário é fundamental para criar interfaces intuitivas e agradáveis.</li>
+        <li><b>Versionamento de código:</b> Utilizar ferramentas como Git para gerenciar o código e trabalhar em equipe.</li>
+        </ul>
+        <h2><em>Como se tornar um Desenvolvedor Front-end?</em></h2>
+
+        <p><span style="font-weight: 900;">Existem diversas formas de se tornar um desenvolvedor front-end:</span></p>
+        <ul>
+        <li><b>Cursos online:</b> <span style="font-style: italic;">Plataformas como Udemy</span>, Coursera e a própria DIO oferecem diversos cursos completos sobre desenvolvimento front-end.</li>
+        <li><b>Bootcamps:</b> Imersões intensivas que te preparam para o mercado de trabalho em poucos meses.</li>
+        <li><b>Faculdades:</b> Graduações em Ciência da Computação, Sistemas de Informação e áreas relacionadas podem te fornecer uma base sólida em programação.</li>
+        <li><b>Autodidatismo:</b> Com muita dedicação e recursos online, é possível aprender a programar por conta própria.</li>
+        </ul>
+        <h2>O Futuro do Desenvolvedor Front-end</h2>
+
+        <p>O futuro do <span style="font-style: italic;">desenvolvedor front-end</span> é promissor. Com o avanço das tecnologias, novas ferramentas e linguagens estão surgindo constantemente, o que exige que o profissional esteja sempre atualizado. Novas áreas como realidade virtual e aumentada, <span style="font-weight: bold;">inteligência artificial</span> e internet das coisas também abrirão novas oportunidades para os desenvolvedores front-end.</p>
+
+        <h2>Conclusão</h2>
+
+        <p>Se você tem paixão por tecnologia, criatividade e gosta de resolver problemas, a carreira de desenvolvedor front-end pode ser perfeita para você. Com dedicação e estudo, você poderá construir interfaces incríveis e fazer a diferença no mundo digital.</p>
+    </div>
 </body>
 </html>
