Aula sobre imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="">Home</a>
                 <a href="">Sobre</a>
-                <a href="">Contantos</a>
+                <a href="assets/pages/imagens.html">Aula de hoje</a>
             </nav>
         </div>
     </header>
@@ -56,6 +56,7 @@
         <ol>
             <li>Listas não ordenadas são para listas onde a ordem dos itens não importa, como uma lista de compras, por exemplo. Essas são envolvidas em um elemento &lt;ul&gt;.</li>
             <li>Listas Ordenadas são para listas onde a ordem dos itens importa, como uma receita. Essas são envolvidas em um elemento &lt;ol&gt;.</li>
+            <li>Cada item dentro de uma lista deve ser envolvido por uma tag &lt;li&gt;</li>
         </ol>
         <h3>A tag &lt;span&gt;</h3>
         O elemento &lt;span&gt;. Não tem semântica. Você usa-o para agrupar conteúdo quando deseja aplicar o CSS (ou fazer algo com JavaScript) sem dar-lhe nenhum significado extra
