Aula sobre imagens

--- a/assets/pages/imagens.html
+++ b/assets/pages/imagens.html
@@ -34,7 +34,7 @@
             <li><a href="https://pixabay.com/pt/" target="_blank">Pixabay</a></li>
         </ul>
 
-        <p>Para  adicionar uma imagem em nosso site usamos a tag <b>&lt;img src="" alt=""&gt;. No atributo src nós vamos passar o caminhho da imagens e no atributo alt vamos colocar um texto descritivo da imagem para leitores de tela.</b></p>
+        <p>Para  adicionar uma imagem em nosso site usamos a tag <b>&lt;img src="" alt=""&gt;</b>. No atributo src nós vamos passar o caminhho da imagens e no atributo alt vamos colocar um texto descritivo da imagem para leitores de tela.</p>
 
         <p>Nossa atividade de hoje vamos adicionar uma imagem ao nosso site da aula anterior.</p>
     </main>
