aula de javascript

--- a/aula-10-09-24/texto.html
+++ b/aula-10-09-24/texto.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <title>Ajeitando o texto</title>
 </head>
 <body>
@@ -15,8 +14,12 @@
         <p>Você já se perguntou como os sites e aplicativos que você usa diariamente são construídos? Quem cria as interfaces intuitivas e visuais que tornam a sua experiência online tão agradável? A resposta é: o desenvolvedor front-end.</p>
 
         <p>O desenvolvedor front-end é o profissional responsável por criar e dar vida à parte visual de um site ou aplicativo. É ele quem transforma designs em código, utilizando linguagens como <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>. Em outras palavras, tudo o que um usuário vê e interage em uma plataforma digital é resultado do trabalho do desenvolvedor front-end.</p>
+        <div class="imagem">
+        <img src="dev-500.jpg" alt="imagen de código">
+        </div>
 
         <h2>Por que ser um Desenvolvedor Front-end?</h2>
+
         <ul>
         <li><b>Crie experiências incríveis:</b> A demanda por interfaces intuitivas e atraentes nunca foi tão alta. Como desenvolvedor front-end, você terá a oportunidade de criar experiências digitais que encantam os usuários.</li>
 
