Aula do dia 17/09

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         <h2>É hora da atividade</h2>
         <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-10-09-24/atividade.zip" download="atividade">arquivo</a>, dentro dele há um arquivo HTML que etá faltando algumas tags, você deverá completar o arquivo com as tas que estão faltando.</p>
         <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-10-09-24/texto.html">exemplo</a></p>
+
+
+        <h2>É hora da atividade</h2>
+        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-17-09-24/asserts/img/img.zip" download="img.zip">arquivo</a>, dentro dele há duas imagens que vamos utilizar no nossp projeto</p>
+        <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-17-09-24/index.html">exemplo</a></p>
     </main>
 </body>
 </html>
