--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="">Home</a>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87jlcIRGCK6YGogt7O9bn3Zvn8EJfROr_JZFz-hvHmC2Y-Q/viewform?usp=pp_url" target="_blank">Atividade</a>
                 <a href="assets/pages/imagens.html">Aula de hoje</a>
+                <a href="aula-24-09-24-tarde/index.html">Site do g1</a>
             </nav>
         </div>
     </header>
