--- a/aula-10-09-24/texto.html
+++ b/aula-10-09-24/texto.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
     <title>Ajeitando o texto</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="">Home</a>
+            <a href="pages/midia.html">Midia</a>
+        </nav>
+    </header>
     <div class="conteiner">
         <h1>Desenvolvedor Front-end: Crie a Interface do Futuro</h1>
         <h2>O que é um Desenvolvedor Front-end?</h2>
