--- a/exemplos/display.html
+++ b/exemplos/display.html
@@ -6,18 +6,22 @@
     <title>Display</title>
     <style>
         .conteiner{
-            display: block;
-            /* width: 300px;
-            height: 300px; */
-            background-color: aqua;
+            background-color: aquamarine;
+           display: flex;
+           justify-content: center;
+        }
+
+        .conteudo{
+            width: 300px;
+            height: 200px;
             margin: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="conteiner">1</div>
-    <div class="conteiner">2</div>
-    <div class="conteiner">3</div>
-    <div class="conteiner">4</div>
+    <div class="conteiner">
+        <div class="conteudo"><img style="width: 100%;height: 100%;" src="html.png" alt=""></div>
+        <div class="conteudo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, quidem eaque? Ratione sed facere, libero nesciunt nisi tempora laboriosam, dolorum iure, voluptatem error vero? Impedit alias minus accusamus sequi magni.</div>
+    </div>
 </body>
 </html>
