--- a/aula-24-09manha/video.html
+++ b/aula-24-09manha/video.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video controls autoplay muted>
+    <video controls autoplay muted width="100px">
         <source src="asserts/video/dblack.mp4" type="video/mp4">
     </video>
 
