--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <h2>É hora da atividade -3</h2>
         <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-24-09-24-tarde/asserts/img.zip" download="img.zip">arquivo</a>, dentro dele há algumas imagens que vamos utilizar no nossp projeto. Também hé um material de apoio neste <a href="https://leandroprofdev2024.pythonanywhere.com/post/atividade/" target="_blank">endereço</a></p>
         <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-24-09-24-tarde/index.html">exemplo</a></p>
+
+
+        <h2>Avaliação</h2>
+        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe a pasta com o material <a href="avaliacoes/avaliacao-1-terca-quintq-tarde.zip" download="avaliacao.zip">arquivo</a>.A avaliação consiste em pegar um layout e transformar em um site, na pasta estará disponivel a paleta de cores e a imagen usada no layout.
     </main>
 </body>
 </html>
