--- a/terca-quinta-manha/exemplos/cores/projeto.html
+++ b/terca-quinta-manha/exemplos/cores/projeto.html
@@ -18,9 +18,8 @@
         </header>
         <article>
             <h1>Natureza</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolores aliquid nulla incidunt eveniet quos quia facere illum repellat. Debitis doloremque tenetur repellat laudantium explicabo molestiae illum temporibus asperiores accusamus.
-            Impedit cupiditate doloremque commodi distinctio vel porro voluptatibus. Itaque odit libero animi architecto a, inventore, labore voluptatum quos officia tenetur in provident distinctio reprehenderit enim porro, quia nesciunt qui ad?
-            Tempora nulla ducimus ab maxime temporibus eum deserunt repellendus natus magnam ratione quam nihil nostrum eveniet numquam dolorem officiis hic animi labore consequatur, omnis nobis? Sint accusantium repellat eum corporis!</p>
+            <h2>Vamos preservar a natureza</h2>
+            <button class=btn-grad>Vamos salvar o mundo juntos</button>
         </article>
     </div>
     <section>
