--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-17-09-24/asserts/img/img.zip" download="img.zip">arquivo</a>, dentro dele há duas imagens que vamos utilizar no nossp projeto</p>
         <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-17-09-24/index.html">exemplo</a></p>
 
-        <h2>É hora da atividade -3</h2>
-        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="aula-24-09-24-tarde/asserts/img.zip" download="img.zip">arquivo</a>, dentro dele há algumas imagens que vamos utilizar no nossp projeto. Também hé um material de apoio neste <a href="https://leandroprofdev2024.pythonanywhere.com/post/atividade/" target="_blank">endereço</a></p>
-        <p>A página deverá ficar parecido com a do <a target="_blank" href="aula-24-09-24-tarde/index.html">exemplo</a></p>
+        <h2>Atividade do G1 -3</h2>
+        <p>Vamos por em práttica o nosso conhecimento em HTML que adquirimos até aqui. Baixe esse <a href="terca-quinta-manha/exemplos/g1/asserts/img-g1.zip" download="img.zip">arquivo</a>, dentro dele há algumas imagens que vamos utilizar no nossp projeto. Também hé um material de apoio neste <a href="https://leandroprofdev2024.pythonanywhere.com/post/atividade/" target="_blank">endereço</a></p>
+        <p>A página deverá ficar parecido com a do <a target="_blank" href="/terca-quinta-manha/exemplos/g1/index.html">exemplo</a></p>
 
 
         <h2>Avaliação</h2>
