--- a/javascript/dom/trabalhandoComEventos3.html
+++ b/javascript/dom/trabalhandoComEventos3.html
@@ -45,7 +45,11 @@
     </div>
     <div class="direita" wm-dropzone></div>
     <script>
-        // ...
+        const items = document.querySelectorAll('[wm-dropzone] .item')
+        console.log(items)
+        items.forEach((item, index) => {
+            item.draggable = true
+        });
     </script>
 </body>
 
